# XenoLib

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml  cmake.yml  release.yml
include/xenolib/: arh.hpp  bc.hpp  bdat.hpp  core.hpp  drsm.hpp  lbim.hpp  msim.hpp  msmd.hpp  mstm.hpp  mths.hpp  mtxt.hpp  mxmd.hpp  sar.hpp  xbc1.hpp
include/xenolib/bc/: anim.hpp  asmb.hpp  asmb_v1.inl  asmb_v2.inl  skel.hpp
include/xenolib/internal/: bdat1.inl  bdat4.inl  gx2.hpp  model.hpp  msim.hpp  mstm.hpp  mxmd.hpp  mxmd_v1.inl  mxmd_v2.inl  mxmd_v3.inl
obsolete/: MXMD.h
source/: CMakeLists.txt  addrlib.h  addrlib.inl  bc.cpp  bdat.cpp  core.cpp  drsm.cpp  lbim.cpp  msim.cpp  msmd.cpp  mstm.cpp  mths.cpp  mtxt.cpp  mxmd.cpp  sar.cpp  xbc1.cpp
toolset/: CMakeLists.txt  README.md  doc_template.xml  sign_key.asc
toolset/arh/: CMakeLists.txt  extract_arh.cpp
toolset/asm/: CMakeLists.txt  asm_to_json.cpp
toolset/bdat/: CMakeLists.txt  bdat_to_json.cpp
toolset/common/: dds.hpp  texture.hpp  tfbh.hpp
toolset/dev/: CMakeLists.txt  decrypt_arh.cpp  decrypt_bdat.cpp
toolset/font/: CMakeLists.txt  fnt_extract.cpp
toolset/map/: CMakeLists.txt  im_to_gltf.cpp  sm_extract.cpp  tm_to_gltf.cpp
toolset/mdo/: CMakeLists.txt  mdo_to_gltf.cpp
toolset/sar/: CMakeLists.txt  make_sar.cpp  sar_extract.cpp
toolset/shader/: CMakeLists.txt  extract_shaders.cpp
toolset/smt/: CMakeLists.txt  smt_extract.cpp
toolset/tex/: CMakeLists.txt  tex_to_dds.cpp
